# dinora

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  board_utils.py  dataset.py  docker-compose.yml  environment.yml  main.py  make_compact_dataset.py  model.py  preprocess_pgn.py  pyproject.toml  readme.md  requirements.txt  run.sh  run_uci.bat  train.py  train3.py  upload_compact_dataset.py
.github/workflows/: dinora.yaml
bench/: test_board_repr.py  test_search_speed.py
configs/elo_match/: stockfish_dinora.json  stockfish_dinora_1s_move.json  stockfish_stockfish.json
configs/elofish/: stockfish_dinora_0.5s.json
configs/train/: dev.json
data/handmade_val/: handmade.json
dinora/: __init__.py  __main__.py  board_representation.py  board_representation2.py  board_utils.py  ccrl.py  cli.py  cli_utils.py  console_renderer.py  datamodules.py  dataset.py  dataset2.py  elo_estimator.py  engine.py  estimate_elo.py  keras_utils.py  model.py  net.py  outcome.py  pgntools.py  policy.py  policy2.py  preprocess_pgn.py  search.py  selfplay.py  simple_model.py  train.py  train_callbacks.py  training.py  uci.py  utils.py
dinora/bench/: cli.py  selfplay.py
dinora/board_representation/: canon_planes.py
dinora/cli/: __init__.py  uci.py  uci_options.py  uci_parser.py
dinora/elo_estimator/: cli.py  elo_estimator.py
dinora/elo_estimator/glicko2/: glicko2.py  glicko2tests.py
dinora/encoders/: board_representation.py  outcome.py  policy.py
dinora/glicko2/: README.md  __init__.py
dinora/handmade_val_dataset/: add_stockfish_eval.py  dataset.py  human_eval.txt  parse_human_eval.py
dinora/mcts/: __init__.py  constraints.py  evaluator.py  node.py  noise.py  params.py  reduction.py  search.py  uci_info.py
dinora/metrics/: treeviz.py
dinora/models/: __init__.py  alphanet.py  badgyal.py  base.py  cached_model.py  handcrafted.py  nnwrapper.py  onnxmodel.py
dinora/models/dnn/: __init__.py  adapter.py
dinora/models/torchnet/: __init__.py  adapter.py  alphanet.py  convnet.py  linear_net.py  network.py  resnet.py
dinora/onnx/: cli.py  export_onnx.py
dinora/search/: base.py  registered.py  stoppers.py
dinora/search/ext_mcts/: node.py  params.py  search.py  searcher.py  uci_info.py
dinora/search/mcts/: mcts.py
dinora/search/mcts_softmax/: mcts_softmax.py
dinora/search/mcts_vloss/: mcts_vloss.py
dinora/train/: datamodules.py  fit.py  train_callbacks.py
dinora/train/compact_dataset/: make.py  make_cli.py  upload.py  upload_cli.py
dinora/train/handmade_val_dataset/: add_stockfish_eval.py  dataset.py  parse_human_eval.py
dinora/uci/: __init__.py  cli.py  uci.py  uci_go_parser.py  uci_options.py
dinora/viz/: cli.py  console_renderer.py  treeviz.py
docker/: Dockerfile  requirements.txt
docs/source/: benchmarking.rst  conf.py  development.rst  index.rst  installation.rst  pyinstaller.rst  treeviz.rst
elofish/: __main__.py  elofish.py
elofish/glicko2/: __init__.py  glicko2tests.py
feed/: games.json.REMOVED.git-id
jupyter/: board_tensor_viz.ipynb  lr_find.ipynb  main.ipynb  models.ipynb  selfplay.ipynb  train.ipynb  treeviz.ipynb
models/: best_light_model.h5.REMOVED.git-id  best_model.h5.REMOVED.git-id  latest.h5.REMOVED.git-id
pgn/: All_My_Games.pgn  All_My_Games.pgn.REMOVED.git-id  lichess_Saegl_2020-08-21.pgn.REMOVED.git-id  mygames.pgn.REMOVED.git-id
src/dinora/: __init__.py
src/dinora/bench/: cli.py
src/dinora/encoders/: outcome.py
src/dinora/models/: cached_model.py  handcrafted.py  onnxmodel.py
src/dinora/onnx/: cli.py  export_onnx.py
src/dinora/search/: registered.py  stoppers.py
src/dinora/search/ext_mcts/: reduction.py
src/dinora/search/onemove/: onemove.py
src/dinora/train/: fit.py  train_callbacks.py
src/dinora/train/compact_dataset/: upload.py  upload_cli.py
src/dinora/train/handmade_val_dataset/: parse_human_eval.py
src/dinora/uci/: cli.py  uci_go_parser.py
src/elofish/: __main__.py  elofish.py
src/elofish/glicko2/: glicko2.py
tests/: test_board_repr.py  test_handmade_val_dataset.py  test_mate.py  test_model_batch.py  test_pgntools.py  test_policy2.py  test_search.py
tests/bench/: test_board_repr.py  test_model_interference.py
tests/data/positions/: canon_planes.npy
tests/positions/: various.json
tests/unit/: test_board_repr.py  test_models.py  test_policy2.py  test_search.py
train_configs/: dev.json  overfit_me.json  prod.json
