[tool.poetry]
name = "Dinora"
version = "0.0.3"
description = "Dinora Chess Engine"
authors = ["Saegl <saegl@protonmail.com>"]
maintainers = ["Saegl <saegl@protonmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/DinoraChess/dinora"
repository = "https://github.com/DinoraChess/dinora"
documentation = "https://dinora.readthedocs.io/en/latest"
keywords = ["chess", "uci", "ai", "tensorflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: GPU :: NVIDIA CUDA :: 11.2",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research"
]


[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.19.2"
chess = "^1.6.1"
pylru = "^1.2.0"
click = "^8.1.3"

# tf
tensorflow = { version = "2.8.0", optional = true }
protobuf = { version = "3.20.1", optional = true }
tensor-annotations = { version = "2.0.1", optional = true }
tensor-annotations-tensorflow-stubs = { version = "2.0.1", optional = true }

# docs
Sphinx = { version = "^5.1.1", optional = true }
furo = { version = "^2022.6.21", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pre-commit = "^2.19.0"
black = "^22.3.0"
pytest-benchmark = "^3.4.1"
mypy = "^0.982"

[tool.poetry.extras]
tf = [
    "tensorflow",
    "protobuf",
    "tensor-annotations",
    "tensor-annotations-tensorflow-stubs",
]
docs = ["Sphinx", "furo"]

[tool.poetry.scripts]
dinora = 'dinora.cli:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
