[project]
name = "Dinora"
version = "0.0.3"
description = "Dinora Chess Engine"
readme = "README.md"
keywords = ["chess", "uci", "ai", "tensorflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: GPU :: NVIDIA CUDA :: 11.2",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research"
]

[tool.poetry] # Legacy
authors = ["Saegl <saegl@protonmail.com>"]
maintainers = ["Saegl <saegl@protonmail.com>"]
license = "GPL-3.0-only"
homepage = "https://github.com/DinoraChess/dinora"
repository = "https://github.com/DinoraChess/dinora"
documentation = "https://dinora.readthedocs.io/en/latest"

[tool.setuptools]
py-modules = ['dinora']

[tool.pytest.ini_options]
pythonpath = ["."]
norecursedirs = 'bench'  # Run benchmarks only by specifying `bench` directory

[tool.mypy]
ignore_missing_imports = true
plugins = [
    'numpy.typing.mypy_plugin'
]
exclude = [
    'docs',
    'tests',
    'dinora/models/dnn/keras_model.py'  # Will replace keras with pytorch, maybe
]
